# c_devcontainer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
.devcontainer/: devcontainer.json  dockerfile
deps1/: Program.cs  deps1.csproj
deps2/: Program.cs
lib/: main.dart
